frontend - sidebar parcialmente pronta

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-sidebar></app-sidebar>
+<div class="container">
+    <app-sidebar></app-sidebar>
+    <app-lista-veiculos class="container__content"></app-lista-veiculos>
+</div>
