--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -19,7 +19,26 @@ button{
     cursor: pointer;
 }
 
+input{
+    border: none;
+    outline: none;
+}
+
 a {
     text-decoration: none;
     cursor: pointer;
+}
+
+//-> Hide Arrows From Input Number
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
