--- a/frontend/src/app/shared/sidebar/sidebar.component.scss
+++ b/frontend/src/app/shared/sidebar/sidebar.component.scss
@@ -1,33 +1,114 @@
-.container{
-    width: 150px;
+.container {
+    transition: .4s;
+    left: 0;
+    width: 250px;
     height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #e4e4e4;
 
-    &__list{
+    &__button {
+        position: absolute;
+        right: -45px;
+        top: 5px;
+        width: 40px;
+        height: 40px;
+        border-radius: 5px;
+        background-color: #d6d6d6;
+        color: #3a3a3a;
+        font-size: 22px;
+
+        &:hover {
+            transition: 0.2s;
+            background-color: #ececec;
+            color: #2d3a80;
+        }
+    }
+
+    &__logo {
+        width: 150px;
+        height: 150px;
+        border-radius: 75px;
+        margin: 15px 0;
+        background-color: #2d3a80;
+    }
+
+    &__list {
+        width: 100%;
+        height: calc(100% - 180px);
         list-style: none;
         display: flex;
         flex-direction: column;
 
-        &__item{
-            background-color: blue;
+        &__item {
+            margin-bottom: 5px;
 
-            &__button{
+            &--ultimo {
+                margin-top: auto;
+                margin-bottom: 5px;
+            }
+
+            &__button {
                 width: 100%;
-                height: 30px;
+                height: 50px;
                 background-color: #d6d6d6;
-                color: #5a5a5a;
+                color: #3a3a3a;
+                font-size: 16px;
                 font-weight: lighter;
 
-                &:hover{
-                    transition: .2s;
+                &:hover {
+                    transition: 0.2s;
                     border-left: 4px solid #2d3a80;
                     background-color: #ececec;
+                    color: #2d3a80;
                 }
 
-                &:active{
+                &:active {
                     background-color: #c7c7c7;
                 }
             }
+
+            &__input-group {
+                height: 50px;
+                display: flex;
+                align-items: center;
+                padding: 5px;
+
+                &__input {
+                    width: 100%;
+                    height: 35px;
+                    font-size: 14px;
+                    text-indent: 10px;
+                    border: none;
+                    border-top-left-radius: 5px;
+                    border-bottom-left-radius: 5px;
+                    color: #3a3a3a;
+                }
+
+                &__button {
+                    width: 40px;
+                    height: 35px;
+                    border-top-right-radius: 5px;
+                    border-bottom-right-radius: 5px;
+                    background-color: #d6d6d6;
+                    color: #3a3a3a;
+
+                    &:hover {
+                        transition: 0.2s;
+                        background-color: #ececec;
+                        color: #2d3a80;
+                    }
+                }
+            }
         }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .container {
+        transition: .4s;
+        left: -250px;
     }
 }
