frontend - estrutura da tabela pronta

--- a/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.html
+++ b/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.html
@@ -1,3 +1,141 @@
-<section class="container">
-    <h1 class="container__title">Veículos cadastrados</h1>
+<section class="principal">
+    <h1 class="principal__title">Veículos cadastrados</h1>
+
+    <div class="container">
+        <table class="container__table">
+            <!-- id, placa, chassi, renavam, modelo, marca, ano -->
+            <thead class="container__table__head">
+                <tr class="container__table__head__row">
+                    <th class="container__table__head__row__column">Id</th>
+                    <th class="container__table__head__row__column">Placa</th>
+                    <th class="container__table__head__row__column">Chassi</th>
+                    <th class="container__table__head__row__column">RENAVAM</th>
+                    <th class="container__table__head__row__column">modelo</th>
+                    <th class="container__table__head__row__column">marca</th>
+                    <th class="container__table__head__row__column">ano</th>
+                </tr>
+            </thead>
+            <tbody class="container__table__body">
+                <!-- 1;HHO-6008;1RV 524T98 88 S92605;98447225015;Del Rey Belina GL;Ford;1987 -->
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+                <tr class="container__table__body__row">
+                    <td class="container__table__body__row__column">001</td>
+                    <td class="container__table__body__row__column">HHO-6008</td>
+                    <td class="container__table__body__row__column">1RV 524T98 88 S92605</td>
+                    <td class="container__table__body__row__column">98447225015</td>
+                    <td class="container__table__body__row__column">Del Rey Belina GL</td>
+                    <td class="container__table__body__row__column">Ford</td>
+                    <td class="container__table__body__row__column">1987</td>
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+
 </section>
