--- a/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.scss
+++ b/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.scss
@@ -1,16 +1,67 @@
-.container {
+.principal{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     padding: 15px;
+    overflow: hidden;
 
     &__title{
         margin-top: 15px;
         text-transform: uppercase;
-        font-weight: normal;
+        font-weight: lighter;
         color: #2d3a80;
+    }
+}
+
+.container {
+    width: 90%;
+    max-height: 70vh;
+    overflow-y: scroll;
+
+    &__table {
+        width: 100%;
+        height: 80%;
+        padding: 0;
+        empty-cells: show;
+        border-collapse: collapse;
+        background-color: #ececec;
+        
+
+        &__head {
+            background-color: #2d3a80;
+            color: #fff;
+            font-size: 14px;
+            line-height: 35px;
+
+            &__row {
+
+                &__column {
+                    padding: 5px;
+                    border: 1px solid #ddd;
+                }
+            }
+        }
+
+        &__body {
+            &__row {
+                color: #3a3a3a;
+                cursor: pointer;
+                line-height: 35px;
+                
+                &:hover {
+                    transition: background-color 0.2s;
+                    background-color: #d6d6d6;
+                }
+
+                &__column {
+                    padding: 5px;
+                    border: 1px solid #ddd;
+                }
+            }
+        }
     }
 }
 
