listagem de veiculos completa

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
-    <app-sidebar></app-sidebar>
-    <app-lista-veiculos class="container__content"></app-lista-veiculos>
+    <app-sidebar class="container__sidebar"></app-sidebar>
+    <div class="container__content">
+        <router-outlet></router-outlet>
+    </div>   
 </div>
