--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -13,16 +13,16 @@
             </div>
         </li>
         <li class="container__list__item">
-            <button class="container__list__item__button">
+            <button class="container__list__item__button" (click)="goToListaVeiculos()">
                 Listar veículos
             </button>
         </li>
         <li class="container__list__item">
-            <button class="container__list__item__button">
+            <button class="container__list__item__button" (click)="goToAdicionarVeiculo()">
                 Adicionar veículos
             </button>
         </li>
-        <li class="container__list__item">
+        <li class="container__list__item" (click)="goToEditarVeiculo()">
             <button class="container__list__item__button">
                 Editar veículos
             </button>
