--- a/frontend/src/app/shared/sidebar/sidebar.component.scss
+++ b/frontend/src/app/shared/sidebar/sidebar.component.scss
@@ -1,8 +1,8 @@
 .container {
     transition: .4s;
-    left: 0;
     width: 250px;
-    height: 100vh;
+    min-height: 100vh;
+    left: 0;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -10,6 +10,7 @@
     background-color: #e4e4e4;
 
     &__button {
+        display: none;
         position: absolute;
         right: -45px;
         top: 5px;
@@ -24,6 +25,11 @@
             transition: 0.2s;
             background-color: #ececec;
             color: #2d3a80;
+        }
+
+        &:active{
+            transition: .2s;
+            box-shadow: 0px 0px 3px 1px #00000040;
         }
     }
 
@@ -110,5 +116,9 @@
     .container {
         transition: .4s;
         left: -250px;
+
+        &__button{
+            display: block;
+        }
     }
 }
