--- a/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.scss
+++ b/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.scss
@@ -1,24 +1,25 @@
 .principal{
-    width: 100%;
-    min-height: 100vh;
+    width: calc(100vw - 250px);
+    margin-left: auto;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
     padding: 15px;
     overflow: hidden;
 
     &__title{
-        margin-top: 15px;
+        margin: 20px 0;
         text-transform: uppercase;
+        font-size: 30px;
         font-weight: lighter;
         color: #2d3a80;
     }
 }
 
 .container {
-    width: 90%;
-    max-height: 70vh;
+    width: 100%;
+    max-height: 100%;
     overflow-y: scroll;
 
     &__table {
@@ -49,6 +50,7 @@
             &__row {
                 color: #3a3a3a;
                 cursor: pointer;
+                font-size: 14px;
                 line-height: 35px;
                 
                 &:hover {
@@ -59,6 +61,7 @@
                 &__column {
                     padding: 5px;
                     border: 1px solid #ddd;
+                    white-space: nowrap;
                 }
             }
         }
@@ -66,6 +69,14 @@
 }
 
 @media only screen and (max-width: 800px) {
-    .container {
+    .principal {
+        width: 100vw;
+        padding: 15px 10px;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    .principal__title {
+        font-size: 24px;
     }
 }
