--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -6,8 +6,8 @@
     <ul class="container__list">
         <li class="container__list__item">
             <div class="container__list__item__input-group">
-                <input class="container__list__item__input-group__input" type="number" placeholder="Buscar ID">
-                <button class="container__list__item__input-group__button">
+                <input class="container__list__item__input-group__input" type="number" placeholder="Buscar ID" #id_pesquisa>
+                <button class="container__list__item__input-group__button" (click)="searchById(id_pesquisa.value)">
                     <fa-icon [icon]="faSearch"></fa-icon>
                 </button>
             </div>
@@ -22,17 +22,12 @@
                 Adicionar veículos
             </button>
         </li>
-        <li class="container__list__item" (click)="goToEditarVeiculo()">
-            <button class="container__list__item__button">
+        <li class="container__list__item">
+            <button class="container__list__item__button" (click)="goToEditarVeiculo()">
                 Editar veículos
             </button>
         </li>
-        <li class="container__list__item">
-            <button class="container__list__item__button">
-                Deletar veículos
-            </button>
-        </li>
-        <li class="container__list__item--ultimo">
+        <li class="container__list__item--ultimo" (click)="goToSobre()">
             <button class="container__list__item__button">
                 Sobre
             </button>
