--- a/frontend/src/app/shared/editar-veiculo/editar-veiculo.component.scss
+++ b/frontend/src/app/shared/editar-veiculo/editar-veiculo.component.scss
@@ -13,7 +13,7 @@
         color: #2d3a80;
     }
 
-    &__form{
+    &__form {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -22,22 +22,29 @@
         background-color: #e4e4e4;
         border-bottom: 4px solid #2d3a80;
 
-        &__group-group{
+        &__select {
+            width: calc(100% - 20px);
+            height: 35px;
+            margin: 10px 0;
+            font-size: 16px;
+        }
+
+        &__group-group {
             display: flex;
             width: 100%;
         }
 
-        &__input-group{
+        &__input-group {
             width: 100%;
             display: flex;
             align-items: center;
             padding: 10px;
 
-            &--menor{
-               flex-shrink: 3; 
+            &--menor {
+                flex-shrink: 3;
             }
 
-            &__label{
+            &__label {
                 height: 45px;
                 display: flex;
                 align-items: center;
@@ -48,7 +55,7 @@
                 cursor: pointer;
             }
 
-            &__input{
+            &__input {
                 width: 100%;
                 height: 45px;
                 padding: 0 10px;
@@ -58,8 +65,8 @@
             }
         }
 
-        &__button{
-            transition: .2s;
+        &__button {
+            transition: 0.2s;
             margin-top: 15px;
             margin-bottom: 10px;
             padding: 15px 40px;
@@ -67,20 +74,19 @@
             font-size: 18px;
             color: #fff;
 
-            &:hover{
-                transition: .2s;
+            &:hover {
+                transition: 0.2s;
                 background-color: #4e5999;
             }
 
-            &:active{
-                transition: .2s;
+            &:active {
+                transition: 0.2s;
                 background-color: #3e4777;
                 box-shadow: 1px 1px 3px 1px #00000060;
             }
         }
     }
 }
-
 
 @media only screen and (max-width: 1250px) {
     .container__form__input-group--menor {
@@ -110,7 +116,7 @@
     .container {
         padding: 10px;
 
-        &__title{
+        &__title {
             font-size: 24px;
         }
     }
